tests/ui/simd/portable-intrinsics-arent-exposed.postedition2015.stderr
error[E0432]: unresolved import `core::simd::intrinsics`
  --> $DIR/portable-intrinsics-arent-exposed.rs:8:5
   |
LL | use core::simd::intrinsics;
   |     ^^^^^^^^^^^^^^^^^^^^^^ no `intrinsics` in `simd`
   |
help: consider importing this module instead
   |
LL - use core::simd::intrinsics;
LL + use std::intrinsics;
   |

error[E0432]: unresolved import `std::simd::intrinsics`
  --> $DIR/portable-intrinsics-arent-exposed.rs:11:5
   |
LL | use std::simd::intrinsics;
   |     ^^^^^^^^^^^^^^^^^^^^^ no `intrinsics` in `simd`
   |
help: consider importing this module instead
   |
LL - use std::simd::intrinsics;
LL + use std::intrinsics;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
